--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -38,6 +38,10 @@ dependencies:
   google_fonts: 3.0.1
   equatable: ^2.0.3
   page_transition: ^2.0.9
+  carousel_slider: ^4.1.1
+  flutter_svg: ^1.1.3
+  flutter_secure_storage: ^5.1.0
+  
 
 dev_dependencies:
   flutter_test:
@@ -63,6 +67,7 @@ flutter:
 
   # To add assets to your application, add an assets section, like this:
   assets:
+    - assets/
     - assets/images/
     - assets/icons/
     - assets/json/
