--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -33,14 +33,18 @@ dependencies:
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
-  cupertino_icons: ^1.0.2
-  flutter_bloc: ^8.0.1
-  google_fonts: 3.0.1
-  equatable: ^2.0.3
-  page_transition: ^2.0.9
   carousel_slider: ^4.1.1
+  cupertino_icons: ^1.0.2
+  equatable: ^2.0.3
+  flutter_bloc: ^8.0.1
   flutter_svg: ^1.1.3
-  flutter_secure_storage: ^5.1.0
+  google_fonts: 3.0.1
+  page_transition: ^2.0.9
+  input_history_text_field: ^0.1.1
+  
+  
+  
+  
   
 
 dev_dependencies:
