--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -40,7 +40,7 @@ dependencies:
   flutter_svg: ^1.1.3
   google_fonts: 3.0.1
   page_transition: ^2.0.9
-  input_history_text_field: ^0.1.1
+  input_history_text_field: ^0.2.0
   cloud_firestore: ^3.4.4
   firebase_auth: ^3.6.3
   firebase_core: ^1.20.1
@@ -49,6 +49,7 @@ dependencies:
   intl: ^0.17.0
   scroll_to_index: ^3.0.1
   google_sign_in: ^5.4.1
+  flutter_facebook_auth: ^4.4.1
   
   
   
