--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -50,6 +50,10 @@ dependencies:
   scroll_to_index: ^3.0.1
   google_sign_in: ^5.4.1
   flutter_facebook_auth: ^4.4.1
+  scrollable_positioned_list: ^0.3.4
+  dartz: ^0.10.1
+  get_it: ^7.2.0
+  lottie: ^2.0.0
   
   
   
@@ -98,6 +102,7 @@ flutter:
     - assets/images/
     - assets/icons/
     - assets/json/
+    - assets/lottie/
 
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/assets-and-images/#resolution-aware
